--- a/src/Arc4u.OAuth2.AspNetCore/Arc4u.OAuth2.AspNetCore.csproj
+++ b/src/Arc4u.OAuth2.AspNetCore/Arc4u.OAuth2.AspNetCore.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <PackageId>Arc4u.OAuth2.AspNetCore</PackageId>
+    <NoWarn>$(NoWarn);IDE0130</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
